fix(security): use new URL(String) with validated file:// prefix
Replace toUri().toURL() with string-concatenated file:// URL
passed to new URL(String). The path is already validated as
absolute and within pluginsDir before URL construction.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>